EXTRA_DIST = accessor.hxx \
             array_vector.hxx \
             basicimage.hxx \
             basicimageview.hxx \
             bordertreatment.hxx \
             codec.hxx \
             colorconversions.hxx \
             combineimages.hxx \
             config.hxx \
             contourcirculator.hxx \
             convolution.hxx \
             copyimage.hxx \
             cornerdetection.hxx \
             diff2d.hxx \
             distancetransform.hxx \
             edgedetection.hxx \
             error.hxx \
             extraimagetraits.hxx \
             fftw.hxx \
             flatmorphology.hxx \
             functorexpression.hxx \
             gaborfilter.hxx \
             imagecontainer.hxx \
             imageinfo.hxx \
             imageiteratoradapter.hxx \
             imageiterator.hxx \
             impexalpha.hxx \
             impex.hxx \
             initimage.hxx \
             inspectimage.hxx \
             interpolating_accessor.hxx \
             iteratoradapter.hxx \
             iteratortags.hxx \
             iteratortraits.hxx \
             labelimage.hxx \
             localminmax.hxx \
             mathutil.hxx \
             memory.hxx \
             metaprogramming.hxx \
             multi_array.hxx \
             multi_impex.hxx \
             multi_iterator.hxx \
             nonlineardiffusion.hxx \
             numerictraits.hxx \
             pixelneighborhood.hxx \
             recursiveconvolution.hxx \
             resizeimage.hxx \
             rgbvalue.hxx \
             seededregiongrowing.hxx \
             separableconvolution.hxx \
             stdconvolution.hxx \
             stdimagefunctions.hxx \
             stdimage.hxx \
             symmetry.hxx \
             tiff.hxx \
             tinyvector.hxx \
             transformimage.hxx \
             tuple.hxx \
             utilities.hxx \
             windows.h
