EXTRA_DIST = blend.h \
             Correlation.h \
             FitPolynom.h \
             FunctorAccessor.h \
             ImageTransforms.h \
             Interpolators.h \
             MultiLayerImage.h \
             MultiThreadOperations.h \
             NearestFeatureTransform.h \
             Pyramid.h \
             RansacParameterEstimator.h \
             ROI.h \
             ROIImage.h \
             VigQuotientEstimator.h \
             VignettingCorrection.h \
             impexalpha.hxx \
             ransac.h \
             tiffUtils.h \
             utils.h
