datadir = $(docdir)/examples/enfuse

data_DATA = Makefile.userweight \
            README.userweight \
            ../../../src/exposure_weight_base.h \
            fixed_power.cc linear.cc \
            root_finding.hh sinc.cc \
            tabular.cc templated_power.cc \
            variable_power.cc

EXTRA_DIST = $(data_DATA) \
             CMakeLists.txt
